# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py
brain_games/scripts/: brain_ap.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_hcf.py  brain_prime.py  brain_progression.py
